--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,11 @@
 {
-    "name": "dotkernel/dotkernel",
-    "description": "Dotkernel PSR-7 Middleware Application Microframework",
-    "type": "metapackage",
-    "keywords": [
-        "framework",
-         "dk",
-         "dot",
-         "dotkernel",
-         "expressive"
-    ],
-    "homepage": "https://www.dotkernel.com",
-    "license": "MIT License",
-    "require": {
-        "php": "^5.6 || ^7.0",
-        "zendframework/zend-expressive": "^1.0.0"
-    }
+  "name" : "dotkernel/dotkernel",
+  "description" : "Dotkernel PSR-7 Middleware Application Microframework",
+  "require" : {
+    "php" : "^7.1"
+  },
+  "license" : "MIT License",
+  "keywords" : [ "framework", "dk", "dot", "dotkernel", "expressive" ],
+  "type" : "metapackage",
+  "homepage" : "https://www.dotkernel.com"
 }
