fix license in composer.json
License "MIT License" is not a valid SPDX license identifier, see https://spdx.org/licenses/ if you use an open license.
So the string must be in all composer.json files only "MIT"

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "require" : {
     "php" : "^7.1"
   },
-  "license" : "MIT License",
+  "license" : "MIT",
   "keywords" : [ "framework", "dk", "dot", "dotkernel", "expressive" ],
   "type" : "metapackage",
   "homepage" : "https://www.dotkernel.com"
